[gd_scene load_steps=3 format=3 uid="uid://dklv5vnikudxu"]

[ext_resource type="Script" path="res://games/directions.gd" id="1_r0x7k"]
[ext_resource type="Texture2D" uid="uid://coi0jf5nulckp" path="res://games/assets/background.png" id="2_lc8rd"]

[node name="Directions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r0x7k")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lc8rd")

[node name="GridContainer" type="GridContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -29.0
offset_right = 42.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="TextureRect/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Game Title
"
horizontal_alignment = 1

[node name="GameDirections" type="Label" parent="TextureRect/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Game Directions
"
horizontal_alignment = 1

[node name="GameMetaData" type="HBoxContainer" parent="TextureRect/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="GameControls" type="HBoxContainer" parent="TextureRect/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
